--- a/indexv3-wrk-min.html
+++ b/indexv3-wrk-min.html
@@ -235,8 +235,8 @@
       //TESTING DEBUGGING
 
       //NEED FUNCTION TO LOOP THROUGH EACH DIV - IN PROGRESS - 
-      var dataSib = $("textarea").siblings().attr("data-num");
-      //var textSib = $("div").attr("data-num").siblings("textarea");
+      /*var dataSib = $("textarea").siblings().attr("data-num");
+      var textSib = $("div").attr("data-num").siblings("textarea");
       //Trying to target textarea via div sibling
       function printSiblings(){
         for(i=0; i<10; i++){
@@ -246,7 +246,7 @@
       printSiblings();
 
       //FUNCTION TO COMPARE EACH SIBLING PAIR TO CURRENT HOUR
-      /* if(dataSib < currentHour){
+      /*if(dataSib < currentHour){
         $(textSib).addClass("past");
       }else if (dataSib==currentHour){
         $(textSib).addClass("present");
